--- a/WebVisualization/style.css
+++ b/WebVisualization/style.css
@@ -1,5 +1,5 @@
 /*
- First External CSS Stylesheet
+CSS Stylesheet
  */
 
 /* Styling for HTML elements */
@@ -13,8 +13,84 @@ body {
   background: #efeee7;
 }
 
-header {
-  background: #333;
+.topnav {
+  background-color: white;
+  overflow: hidden;
+  
+}
+
+.topnav a {
+  float: left;
+  font-size: 32px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  text-align: center;
+  background-color: teal;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Right-aligned section inside the top navigation */
+.topnav-right {
+  float: right;
+}
+
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 32px; 
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: teal;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 h1 {
@@ -27,12 +103,12 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 28px;
+  color: teal;
+
 }
 
-a {
-  color: #d21034;
-}
+
 
 /* Selecting elements by class */
 .container {
@@ -41,32 +117,14 @@ a {
 }
 
 /* Selecting elements by ID */
-#main-bio,
-#contact-info,
-#bio-image {
-  float: left;
-}
+
 
 #figure {
   position: relative;
 }
 
-#bio-name {
-  position: absolute;
-  top: 150px;
-  left: 30px;
-}
-
-#main-bio {
-  width: 70%;
-}
-
-#contact-info {
-  width: 30%;
-}
-
-#bio-image {
-  width: 200px;
-  height: 200px;
-  margin-right: 20px;
+@media (max-width: 500px) {
+  .topnav-right {
+    visibility: hidden;
+  }
 }
